<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="#f8ccb8"
    android:orientation="vertical"
    android:id="@+id/addNewFrag"
    tools:context="com.phatsmalone.fragments.AddNewPlayerFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/add_new_player"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:text="@string/addNewFrag"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/add_new_player"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        />

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        />
    </LinearLayout>

</LinearLayout>